--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 <body>
 
     <!-- preloader -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="spinner">
             <div class="double-bounce1"></div>
             <div class="double-bounce2"></div>
         </div>
     </div>
 
-    <!-- Mouse Cursor  -->
+ 
     <div class="mouseCursor cursor-outer"></div>
-    <div class="mouseCursor cursor-inner"><span>Drag</span></div>
+    <div class="mouseCursor cursor-inner"><span>Drag</span></div> -->
 
     <!-- Header Top Area -->
 
